V 0.0.9 - Fixed for Kodi 17
V 0.0.9 - Fixed for Kodi 17

--- a/plugin.video.apalimarathi/changelog.txt
+++ b/plugin.video.apalimarathi/changelog.txt
@@ -1,3 +1,6 @@
+[B]v0.0.9[/B]
+Fixed to work on Kodi 17
+
 [B]v0.0.8[/B]
 Fixed Zee Marathi TV Shows to work with new page format by ApaliMarathi.
 
