--- a/deployments/zips/plugin.video.apalimarathi/changelog.txt
+++ b/deployments/zips/plugin.video.apalimarathi/changelog.txt
@@ -1,1 +1,34 @@
-changelog-0.1.0.txt
+[B]v0.1.1[/B]
+Fixed Timeouts
+
+[B]v0.1.0[/B]
+Changed URLs
+
+[B]v0.0.9[/B]
+Fixed to work on Kodi 17
+
+[B]v0.0.8[/B]
+Fixed Zee Marathi TV Shows to work with new page format by ApaliMarathi.
+
+[B]v0.0.7[/B]
+Added Zee Marathi under TV Shows.
+
+[B]v0.0.5[/B]
+[B]v0.0.6[/B]
+Fixed Next Page for Nataks
+
+[B]v0.0.5[/B]
+Added Nataks.
+
+[B]v0.0.4[/B]
+Cleaned up unnecessary files.
+
+[B]v0.0.3[/B]
+Added vid.me resolving until URLResolver accepts my addition.
+
+[B]v0.0.2[/B]
+Added Functionality for A-Z and Years
+
+[B]v0.0.1[/B]
+Initial Release
+
