--- a/plugin.video.apalimarathi/changelog.txt
+++ b/plugin.video.apalimarathi/changelog.txt
@@ -1,5 +1,8 @@
+[B]v0.1.3 10-21-2018[/B]
+Fixed resolver for sendvid.com
+
 [B]v0.1.2 06-05-2018[/B]
-Added resolver for sitevid.com
+Added resolver for sendvid.com
 
 [B]v0.1.1[/B]
 Fixed Timeouts
